--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         <activity 
             android:name="MainActivity" 
             android:exported="true">
+        </activity>
+        <activity
+            android:name="testmain" 
+            android:exported="true">
             <intent-filter>
                 <action 
                     android:name="android.intent.action.MAIN" />
