--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
         android:supportsRtl="true" 
         android:theme="@style/AppTheme">
         <activity 
+            android:name=".ui.login.QRCodeLoginActiviy" 
+            android:exported="true">
+        </activity>
+        <activity 
             android:name="MainActivity" 
             android:exported="true">
         </activity>
