--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".ui.settings.ScreenSettingActivity"
+            android:exported="true">
+        </activity>
+        <activity
             android:name=".ui.login.QRCodeLoginActivity"
             android:exported="true">
-            
         </activity>
         <activity
             android:name="MainActivity"
