--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,11 @@
             android:name="MainActivity"
             android:exported="true">
         </activity>
+
+        <activity
+            android:name=".ui.home.HomeActivity"
+            android:exported="true">
+        </activity>
         <activity
             android:name="testmain"
             android:exported="true">
